argocd/workloads/platform/public-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 172.16.100.110
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-www-daigo-suhara-com
      protocol: HTTPS
      port: 443
      hostname: www.daigo-suhara.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: www-daigo-suhara-com-tls
    - name: https-daigo-suhara-com
      protocol: HTTPS
      port: 443
      hostname: daigo-suhara.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: www-daigo-suhara-com-tls
    - name: https-www-pochizo-com
      protocol: HTTPS
      port: 443
      hostname: www.pochizo.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: pochizo-com-tls
    - name: https-pochizo-com
      protocol: HTTPS
      port: 443
      hostname: pochizo.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: pochizo-com-tls
